--- a/pom.xml
+++ b/pom.xml
@@ -11,8 +11,15 @@
 	</parent>
 
 	<name>Explore With Me</name>
+    <modules>
+        <module>statistics</module>
+<!--		<module>statistics/stat-dto</module>-->
+<!--		<module>statistics/stat-service</module>-->
+<!--		<module>statistics/stat-client</module>-->
+        <module>main-service</module>
+    </modules>
 
-	<groupId>ru.practicum</groupId>
+    <groupId>ru.practicum</groupId>
 	<artifactId>explore-with-me</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>pom</packaging>
@@ -58,6 +65,13 @@
 							<artifactId>checkstyle</artifactId>
 							<version>10.3</version>
 						</dependency>
+
+						<dependency>
+							<groupId>org.springframework.boot</groupId>
+							<artifactId>spring-boot-starter-actuator</artifactId>
+						</dependency>
+
+
 					</dependencies>
 				</plugin>
 				<plugin>
