--- a/statistics/stat-service/src/main/resources/application.properties
+++ b/statistics/stat-service/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-server.port=4222
+server.port=9090
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL10Dialect
 spring.jpa.properties.hibernate.format_sql=true
@@ -9,7 +9,8 @@ spring.sql.init.mode=always
 #spring.datasource.username=test
 #spring.datasource.password=test
 #---
-spring.config.activate.on-profile=ci,test
+
+spring.config.activate.on-profile=ci,test,default
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.url=jdbc:h2:mem:ewmstats
 spring.datasource.username=test
