--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,42 +1,34 @@
 version: '3.1'
 services:
-  main-service:
-    build: main-service
-    image: main-service
-    container_name: main-service
-    ports:
-      - "8080:8080"
-    depends_on:
-      - stat-service
-    environment:
-      - STAT_SERVICE_URL=http://stat-service:9090
-    volumes:
-      - "/etc/localtime:/etc/localtime:ro"
-      - "/etc/timezone:/etc/timezone:ro"
-
-  stat-service:
+  statistics:
     build: statistics/stat-service
-    image: statistics
-    container_name: statistics
+    image: stat-service
+    container_name: stat-service
     ports:
       - "9090:9090"
     depends_on:
-      - db
+      - statistics-db
     environment:
-      - SPRING_DATASOURCE_URL=jdbc:postgresql://db:5432/shareit
-    volumes:
-      - "/etc/localtime:/etc/localtime:ro"
-      - "/etc/timezone:/etc/timezone:ro"
+      - spring.datasource.url=jdbc:postgresql://statistics-db:5432/ewmstats
+        - spring.datasource.username=test
+        - spring.datasource.password=test
 
-  db:
+
+  statistics-db:
     image: postgres:14-alpine
     container_name: statistics-db
     ports:
       - "6541:5432"
     environment:
-      - POSTGRES_DB=shareit
+      - POSTGRES_DB=ewmstats
       - POSTGRES_USER=test
       - POSTGRES_PASSWORD=test
-    volumes:
-      - "/etc/localtime:/etc/localtime:ro"
-      - "/etc/timezone:/etc/timezone:ro"
+
+  ewm-service:
+    build: main-service
+    image: main-service
+    container_name: main-service
+    ports:
+      - "8080:8080"
+
+
