--- a/statistics/stat-service/src/main/resources/application.properties
+++ b/statistics/stat-service/src/main/resources/application.properties
@@ -4,12 +4,12 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL10Dialec
 spring.jpa.properties.hibernate.format_sql=true
 spring.sql.init.mode=always
 #---
-#spring.datasource.driverClassName=org.postgresql.Driver
-#spring.datasource.url=jdbc:postgresql://localhost:5432/ewmstats
-#spring.datasource.username=test
-#spring.datasource.password=test
+spring.datasource.driverClassName=org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://localhost:5432/ewmstats
+spring.datasource.username=test
+spring.datasource.password=test
 #---
-spring.config.activate.on-profile=ci,test,default
+spring.config.activate.on-profile=ci,test
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.url=jdbc:h2:mem:ewmstats
 spring.datasource.username=test
