--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,9 @@
 version: '3.1'
 services:
-  stats-server:
+  statistics:
     build: statistics/stat-service
-    image: stat-service
-    container_name: stat-service
+    image: statistics
+    container_name: statistics
     ports:
       - "9090:9090"
     depends_on:
