--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 version: '3.1'
 services:
-  statistics:
+  stats-service:
     build: statistics/stat-service
     image: statistics
     container_name: statistics
