--- a/statistics/stat-client/src/main/resources/application.properties
+++ b/statistics/stat-client/src/main/resources/application.properties
@@ -2,5 +2,5 @@ logging.level.org.springframework.web.client.RestTemplate=DEBUG
 #
 server.port=8080
 #
-#stat-service.url=${STAT_SERVICE_URL}
-stat-service.url=http://stat-service:9090
+stat-service.url=${STAT_SERVICE_URL}
+#stat-service.url=http://stat-service:9090
