--- a/statistics/stat-service/src/main/resources/application.properties
+++ b/statistics/stat-service/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/ewmstats
 spring.datasource.username=test
 spring.datasource.password=test
 #---
-spring.config.activate.on-profile=ci,test,default
+spring.config.activate.on-profile=ci,test
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.url=jdbc:h2:mem:ewmstats
 spring.datasource.username=test
