--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,9 +10,9 @@ services:
       - statistics-db
     environment:
       - spring.datasource.url=jdbc:postgresql://statistics-db:5432/ewmstats
-        - spring.datasource.username=test
-        - spring.datasource.password=test
-        - STAT_SERVICE_URL=http://stats-service:9090
+      - spring.datasource.username=test
+      - spring.datasource.password=test
+      - STAT_SERVICE_URL=http://stat-service:9090
 
 
   statistics-db:
