--- a/statistics/stat-dto/pom.xml
+++ b/statistics/stat-dto/pom.xml
@@ -33,6 +33,10 @@
             <artifactId>lombok</artifactId>
             <optional>true</optional>
         </dependency>
+        <dependency>
+            <groupId>jakarta.persistence</groupId>
+            <artifactId>jakarta.persistence-api</artifactId>
+        </dependency>
     </dependencies>
 
 
