--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,5 +31,20 @@ services:
     container_name: main-service
     ports:
       - "8080:8080"
+    depends_on:
+      - ewm-db
+      - stats-server
+    environment:
+      - spring.datasource.url=jdbc:postgresql://ewm-db:5432/ewmmain
+      - spring.datasource.username=test
+      - spring.datasource.password=test
+      - STAT_SERVICE_URL=http://stat-service:9090
 
-
+  ewm-db:
+    image: postgres:15.3-alpine3.18
+    ports:
+      - "6543:5432"
+    environment:
+      - POSTGRES_DB=ewmmain
+      - POSTGRES_USER=test
+      - POSTGRES_PASSWORD=test
