--- a/main-service/src/main/resources/application.properties
+++ b/main-service/src/main/resources/application.properties
@@ -1,18 +1,21 @@
-server.port=9090
-
+server.port=8080
+stats-server.url=http://stats-server:9090
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL10Dialect
 spring.jpa.properties.hibernate.format_sql=true
 spring.sql.init.mode=always
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
 #---
 spring.datasource.driverClassName=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://statistics-db:5432/ewmstats
+spring.datasource.url=jdbc:postgresql://ewm-db:5432/ewmmain
 spring.datasource.username=test
 spring.datasource.password=test
 #---
 spring.config.activate.on-profile=ci,test
 spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.url=jdbc:h2:mem:ewmstats
+spring.datasource.url=jdbc:h2:mem:ewmmain
 spring.datasource.username=test
 spring.datasource.password=test
+
