--- a/statistics/stat-client/src/main/resources/application.properties
+++ b/statistics/stat-client/src/main/resources/application.properties
@@ -2,5 +2,6 @@ logging.level.org.springframework.web.client.RestTemplate=DEBUG
 #
 server.port=8080
 #
-stat-service.url=${STAT_SERVICE_URL}
+stats-server.url=${STATS_SERVER_URL}
+#stats-server.url=http://localhost:9090/
 #stat-service.url=http://stat-service:9090
