--- a/statistics/stat-dto/pom.xml
+++ b/statistics/stat-dto/pom.xml
@@ -11,12 +11,9 @@
     </parent>
 
     <artifactId>stat-dto</artifactId>
+    <version>0.0.1-SNAPSHOT</version>
 
-    <properties>
-        <maven.compiler.source>11</maven.compiler.source>
-        <maven.compiler.target>11</maven.compiler.target>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    </properties>
+    <name>stat-dto</name>
 
 
     <dependencies>
